--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -34,18 +34,25 @@ background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(111,210,255,1) 10
 	margin: 60px 20px 20px 20px;
 }
 
+img {
+	width: 100%;
+}
+
 .jumbotron img {
 	width: 100%;
 }
 
 .container .pictures {
+	width: 100%;
 	border-radius: 8px;
 	padding: 20px;
 	margin: 20px;
 	background: rgb(255,255,255);
 background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(111,210,255,1) 100%);
 }
-
+.pictures img{
+	width: 100%;
+}
 .container .calendar {
 	border-radius: 8px;
 	padding: 20px;
